fix firefox profile

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ go
 mattermost-desktop*.deb
 mattermost-url
 gh-latest.sh
-firefox.profile.mattermost.test
+firefox.profile.mattermost.test/
 README.md.asc
-mattermost.profile.i2p
 etc/pki/tls/mattermost/key.pem
 etc/pki/tls/mattermost/cert.pem
