--- a/usr/share/applications/mattermost-i2p-chromium.desktop
+++ b/usr/share/applications/mattermost-i2p-chromium.desktop
@@ -2,6 +2,7 @@
 [Desktop Entry]
 Exec=mattermost-chromium %u
 Type=Application
+Icon=chromium
 Name=I2P Mattermost(Chromium)
 GenericName=I2P Mattermost(Chromium)
 Comment=I2P Mattermost(Chromium)
