--- a/usr/share/applications/mattermost-i2p.desktop
+++ b/usr/share/applications/mattermost-i2p.desktop
@@ -2,6 +2,7 @@
 [Desktop Entry]
 Exec=mattermost-i2p %u
 Type=Application
+Icon=/opt/Mattermost/icon.svg
 Name=I2P Mattermost(Desktop via Tunnel)
 GenericName=I2P Mattermost(Desktop via Tunnel)
 Comment=I2P Mattermost(Desktop via Tunnel)
