Use ubuntu icons for now until I can come up with some better ones

--- a/usr/share/applications/mattermost-i2p-chromium.desktop
+++ b/usr/share/applications/mattermost-i2p-chromium.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Exec=mattermost-chromium %u
 Type=Application
-Icon=chromium
+Icon=chromium-browser
 Name=I2P Mattermost(Chromium)
 GenericName=I2P Mattermost(Chromium)
 Comment=I2P Mattermost(Chromium)
